--- a/app/src/main/res/menu/menu_about.xml
+++ b/app/src/main/res/menu/menu_about.xml
@@ -4,7 +4,8 @@
     tools:context="com.bsuirlabs.softwaredesign.AboutActivity">
     <item
         android:id="@+id/action_about"
+        android:icon="@android:drawable/ic_menu_info_details"
         android:orderInCategory="100"
         android:title="@string/action_about"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
