replace LinearLayoutManager with GridLayoutManager for tablet support

--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1,3 +1,4 @@
 <resources>
     <integer name="screen_orientation">-1</integer> <!-- Default screen orientation -->
+    <bool name="isTablet">false</bool>
 </resources>
