--- a/app/src/main/res/layout/fragment_profile_edit.xml
+++ b/app/src/main/res/layout/fragment_profile_edit.xml
@@ -19,7 +19,8 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/ic_man"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/profile_image" />
 
         <Button
             android:id="@+id/profileEditImageButton"
